--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-haptics": "~14.0.1",
     "expo-image": "^2.0.7",
     "expo-image-picker": "^16.0.6",
+    "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.20",
     "expo-secure-store": "^14.0.1",
@@ -35,9 +36,11 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-outside-press": "^1.2.2",
     "react-native-reanimated": "~3.16.1",
