--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
+    "math": "^0.0.3",
     "mathjs": "^14.5.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
