--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native": "^7.0.14",
     "babel-preset-expo": "^12.0.11",
     "expo": "^52.0.46",
-    "expo-av": "^15.1.4",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-camera": "^16.0.18",
     "expo-constants": "~17.0.8",
